@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-05T01:21:22Z",
+  "timestamp" : "2022-07-05T08:18:44Z",
   "count_outdated" : 372,
   "uniques_outdated" : 214,
-  "count" : 399,
-  "uniques" : 230,
+  "count" : 400,
+  "uniques" : 231,
   "clones" : [
     {
       "timestamp": "2022-06-21T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
