@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 4,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-05T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
